<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PasswordManager</string>
    <string name="activity_main_title">Password-Manager</string>
    <string name="main_layout_menu_item_change_password_string">Change Password</string>
    <string name="login_layout_text_view_name_string">Name</string>
    <string name="login_layout_text_view_password_string">Password</string>
    <string name="login_layout_checkbox_string">Remember User</string>
    <string name="login_layout_button_login">Login</string>
    <string name="login_layout_button_create_user">Create User</string>
    <string name="login_layout_checkbox_save_login">Save Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_new_password">New Password</string>
    <string name="menu_change_password">Change Password</string>
    <string name="error_user_doesnt_exist">User doesn\'t exist!</string>
    <string name="error_wrong_password">Wrong password!</string>
    <string name="error_no_user_input">Enter a username</string>
    <string name="error_no_password">Enter a password</string>
    <string name="error_no_program">Enter a program</string>
    <string name="error_no_user_input_and_password">Enter a username and a password</string>
    <string name="error">Error: </string>
    <string name="error_user_exists">User already exists! Choose another name</string>
    <string name="error_password_dont_match">The passwords don\'t match</string>
    <string name="error_old_password_empty">Old password can\'t be empty</string>
    <string name="error_new_and_old_must_be_different">New and old password must be different</string>
    <string name="error_new_password_cant_be_empty">New password can\'t be empty</string>
    <string name="error_repeated_password_cant_be_empty">The repeated password can\'t be empty</string>
    <string name="error_user_blocked">User is blocked</string>
    <string name="error_password_not_safe_enough">Password isn\'t save enough!</string>


    <string name="helper_add_title">Add password</string>
    <string name="helper_cancel">Cancel</string>
    <string name="helper_edit">Edit</string>
    <string name="helper_delete">Delete</string>
    <string name="helper_delete_message">Are you sure?</string>
    <string name="helper_change_master_password">Change main password</string>
    <string name="helper_create_user">Create User</string>
    <string name="add_edit_password_text_view_program">Program: </string>
    <string name="add_edit_password_text_view_username">Username: </string>
    <string name="add_edit_password_text_view_password">Password: </string>
    <string name="show_password_header">Password</string>
    <string name="change_master_password_old_password">Old password:</string>
    <string name="change_master_password_new_password">New password:</string>
    <string name="change_master_password_repeat_password">Repeat password:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_username_asc">Username ascending</string>
    <string name="order_username_des">Username descending</string>
    <string name="order_program_asc">Program ascending</string>
    <string name="order_program_des">Program descending</string>
    <string name="order_password_asc">Password ascending</string>
    <string name="order_password_des">Password descending</string>

    <string name="ok">OK</string>
    <string name="helper_enter_password">Enter your password</string>
    <string name="bottom_button_add">Add</string>
    <string name="bottom_button_search">Search</string>
    <string name="bottom_button_order">Order</string>
    <string name="create_user_user_name">User name:</string>
</resources>
