<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.password.manager.BottomButtonFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/accent_material_light">

        <Button
            android:layout_width="wrap_content"
            android:layout_weight=".3"
            android:id="@+id/password_list_button_line_add_button"
            android:layout_height="wrap_content"
            android:shadowRadius="0"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:shadowColor="@android:color/transparent"
            android:background="@android:color/transparent"
            android:text="@string/bottom_button_add" />

        <Button
            android:layout_width="wrap_content"
            android:layout_weight=".4"
            android:layout_height="wrap_content"
            android:id="@+id/password_list_button_line_search_button"
            android:shadowRadius="0"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:shadowColor="@android:color/transparent"
            android:background="@android:color/transparent"
            android:text="@string/bottom_button_search" />

        <Button
            android:layout_width="wrap_content"
            android:layout_weight=".3"
            android:layout_height="wrap_content"
            android:id="@+id/password_list_button_line_order_button"
            android:shadowRadius="0"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:shadowColor="@android:color/transparent"
            android:background="@android:color/transparent"
            android:text="@string/bottom_button_order" />
    </LinearLayout>

</FrameLayout>
